# linkedinbias

./: .gitignore  README.md  config.yml  credentials.yml.dist  pyproject.toml
data/: femaledata.json  maledata.json
output/: README.htm  audit.db  data_collection_notes.md
output/analysis/: analysis.htm  methodology_explainer.htm
output/paper/: README.md  main.tex  paper.md  references.bib
src/: analysis.py  client.py  config.py  database.py  embedder.py  exceptions.py  logger.py  main.py  report.py  stats.py
